# kMCpy

./: .gitignore  .readthedocs.yaml  2req.txt  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  build_doc.py  dev_deploy.py  local_env.xyz  pyproject.toml  pytest.ini  requirement.txt  requirement_gui.txt  run_tests.py  setup.py
.codex/environments/: environment.toml
.github/workflows/: publish-to-pypi.yml  python-package-conda.yml  release.yml  sync_to_public.yml  test-ubuntu.yml  test_ubuntu.yml  test_windows.yml  update-citation.yml
Doc/: doc_requirements.txt
Doc/source/: about.md  about.rst  conf.py  index.rst  install.rst
conda/: README.md
conda/recipe/: meta.yaml
dev/: numpy_function_test_test.ipynb
dev/LiCoO2_validation/: 0th_reference_local_env.cif  EntryWithCollCode51182.cif  LiCoO2_dummy_added.cif  bjeea_v2_2022.xlsx  event_kernal.csv  events.json  kmc_LiCoO2.ipynb  kmc_LiCoO2_debug.py  lce.json  lce_site.json
dev/NVP_test/: b1_niu.cif  convert_to_prim.py  event_kernal.csv  events.json  hacking_arg.json  lce.json  local_env.xyz  pre-prim-json.cif  prim.cif  refill-N4VP-POS.cif  rhom_NVP.cif  test.py
dev/scalability/: 0th_reference_local_env.cif  cutoff_scalability.txt  events.json  fitting_results.json  hop_counter_1_1_999.csv  keci.txt  scalability.py  scalability_cutoff.py  scalability_supercell.py  supercell_scalability_log.txt  time_log.txt
dev/test_gather_mc/: EntryWithCollCode15546_Na4Zr2Si3O12_573K.cif  fixing_gather_mc.py  mc_results.h5  mc_results_cif.h5  mc_results_cif.json  prim.json  test_gather_mc.py
dev/v1-v2/: dev_test.ipynb
dev/v3_bulk/: bulk_test.ipynb
dev/v3_grain_boundary_Li3ClO_dev/: 0th_reference_cluster.cif  1th_reference_cluster.cif  210.cif  210.vesta  2th_reference_cluster.cif  3th_reference_cluster.cif  donnot_run_this.py  events.json
dev/v3_nasicon_bulk/: lce.json  v3.py
dev_test/: EntryWithCollCode15546_Na4Zr2Si3O12_573K.cif  dev_test.ipynb  hacking_arg.json  log.ipynb  reference_distance_matrix.csv  support_test.ipynb  test.ipynb  test_LCEv2.json  test_noargs.py  testlce.json
dev_test/2ndinput/: event_kernal.csv  fitting_results.json  lce_site.json  test_input_v2.json
dev_test/LiCoO2_validation/: event_kernal.csv  (+3 more)
docs/: doc_requirements.txt
event_kernal_generator/: events_double_units.pkl
example/: NASICON.ipynb  fitting_results.json  input_example.yaml  lce_only.yaml  minimal_example.py  nasicon.ipynb  tutorial_nasicon.py
examples/: EntryWithCollCode15546_Na4Zr2Si3O12_573K.cif  build_model.py  clean_architecture_example.py  config_factory_examples.py  events_site_list.txt  generate_events.py  local_env.xyz  run_kmc.py  simulationconfig_user_guide.py  supercell.cif  test.ipynb  test_input.json  test_input_v2.json
executable/: gui_wrapper.py  local_env.xyz  test_no_sysargs.py  wrapper.py
input_example/: nasicon.ipynb
inputs/: fitting_results.pkl  lce_double.pkl  lce_site.pkl
kmc/: run_kmc.py
kmcpy/: __init__.py  _version.py  api.py  event.py  event_generator.py  fitter.py  fitting.py  io.py  kmc.py  kmc_tools.py  model.py  model_nasbws.py  simulation_condition.py  sites_and_lattices.py  sites_and_lattices_dev.py  structure_operation.py  tracker.py  units.py
lib/: kmc.py  model.py
manuscript/: ~$cpy_cover_letter.docx
prussian_example/: correlation_matrix.txt  fit_lce.py  keci.txt  lce_site.json  local_cluster_expansion.py  occupation.txt
prussian_input/: correlation_matrix.txt  fitting_results_site.json  full_24d.cif  lce_site.json  occupation.txt
scripts/: build_doc.py  reproduce_nasicon_publication.py  update_citation.py
tests/: __init__.py  test_active_site_index_map.py  test_active_site_order.py  test_api.py  test_basis.py  test_basis_registry.py  test_built_in_properties.py  test_cli_init.py  test_cli_pack_model.py  test_cli_run_kmc.py  test_cli_sample.py  test_cluster_matcher.py  test_comparator_integration.py  test_fitting.py  test_fitting_compatibility.py  test_hop_direction.py  test_imports.py  test_inputset.py  test_integration.py  test_kmc_integration.py  test_kmc_state_tracker_boundaries.py  test_lattice_model.py  test_local_barrier_model.py  test_local_env_catalog.py  test_local_environment.py  test_local_environment_enumerator.py  test_model_bundle_io.py  test_model_file_api.py  test_model_file_io.py  test_model_serialization.py  test_modern_event_generator.py  test_monty_conventions.py  test_multicomponent_chebyshev.py  test_na3sbs4.py  test_nasicon_bulk.py  test_neb_data_loader.py  test_occupation_management.py  test_phase_development.py  test_property.py  test_simulation_condition.py  (+4 more)
tools/: gather_kmc_data.py  gather_mc_data.py
(+445 files in other folders)
