[project]
name = "kmcpy"
version = "0.1.0"
description = "Kinetic Monte Carlo Simulation using Python (kMCpy)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "glob2>=0.7",
    "joblib>=1.5.1",
    "numba>=0.61.2",
    "pymatgen>=2025.5.2",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
doc = [
    "pandoc",
    "sphinx",
    "nbsphinx",
    "sphinx-autodoc-typehints",
    "myst-parser>=4.0.1",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.setuptools]
packages = ["kmcpy"]

[tool.pytest.ini_options]
markers = ["order(number): mark test to run in a specific order"]
pythonpath = ["."]
