[project]
name = "kmcpy"
version = "0.1.0"
description = "Kinetic Monte Carlo Simulation using Python (kMCpy)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "glob2>=0.7",
    "joblib>=1.5.1",
    "numba>=0.61.2",
    "pymatgen>=2025.5.2",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

doc = [
    "docutils",
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx-autodoc-typehints",
    "tqdm",
    "psutil",
    "Jinja2",
    "myst_parser"
]

[tool.setuptools]
packages = ["kmcpy"]

[tool.pytest.ini_options]
markers = ["order(number): mark test to run in a specific order"]
pythonpath = ["."]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools>=61.0", "wheel"] # Or hatchling, flit_core, etc.
build-backend = "setuptools.build_meta"  # Or "hatchling.build", "flit_core.buildapi"
backend-path = ["."] # If backend is in-tree